updating porfolio, index, and style

--- a/index.html
+++ b/index.html
@@ -48,6 +48,17 @@
       </p>
     </div>
       </div>  
+      <br>
+      <div class = "row">
+        <div class="col-lg-6 col-md-12 col-sm-12">
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sint doloremque debitis inventore rem molestiae itaque, quisquam quaerat facere excepturi esse ullam perspiciatis quos quia blanditiis, cumque adipisci commodi. Obcaecati, nobis.
+          </p>
+        </div>
+        <div class ="col-lg-6 col-md-12 col-sm-12">
+          <img src="https://scontent-msp1-1.xx.fbcdn.net/v/t1.0-9/57538136_10161751298970523_6135319658024140800_n.jpg?_nc_cat=104&_nc_sid=0be424&_nc_ohc=oxMwZ972pF8AX8UJnKT&_nc_ht=scontent-msp1-1.xx&oh=0bce4882b46c63543cc4f85ac07017ae&oe=5E80DC6C" height=400px width=400px class="rounded-circle" id = "main" alt="Photo of me" />
+        </div>
+      </div>
       </div>
 
 
