--- a/portfolio.html
+++ b/portfolio.html
@@ -35,28 +35,28 @@
  <div class="container">
      <div class="row">
          <div class="col-md-6 col-sm-12">
-             <img src="https://scontent-msp1-1.xx.fbcdn.net/v/t1.0-9/65499890_10162076875595523_4225878383357067264_n.jpg?_nc_cat=110&_nc_sid=110474&_nc_ohc=ojCnBm0-4UsAX9_Zmtx&_nc_ht=scontent-msp1-1.xx&oh=b50bd76f435c51a01b762972597afabf&oe=5E99E344" width = 500px height = 500px class="rounded-circle" alt="Plivit Lakes"/>
+             <img src="https://scontent-msp1-1.xx.fbcdn.net/v/t1.0-9/65499890_10162076875595523_4225878383357067264_n.jpg?_nc_cat=110&_nc_sid=110474&_nc_ohc=ojCnBm0-4UsAX9_Zmtx&_nc_ht=scontent-msp1-1.xx&oh=b50bd76f435c51a01b762972597afabf&oe=5E99E344" width = 450px height = 450px class="rounded-circle" id="photos" alt="Plivit Lakes"/>
          </div>
          <div class="col-md-6 col-sm-12">
-             <img src="https://scontent-msp1-1.xx.fbcdn.net/v/t1.0-9/60337227_10161875287595523_2504948291372843008_n.jpg?_nc_cat=105&_nc_sid=110474&_nc_ohc=LnsnAMwRA8IAX8l2ysg&_nc_ht=scontent-msp1-1.xx&oh=60828405f53cb0a677c6684b73e88839&oe=5E84A8C4" width = 500px height = 500px class="rounded-circle" alt="Romania" />
+             <img src="https://scontent-msp1-1.xx.fbcdn.net/v/t1.0-9/60337227_10161875287595523_2504948291372843008_n.jpg?_nc_cat=105&_nc_sid=110474&_nc_ohc=LnsnAMwRA8IAX8l2ysg&_nc_ht=scontent-msp1-1.xx&oh=60828405f53cb0a677c6684b73e88839&oe=5E84A8C4" width = 450px height = 450px class="rounded-circle" id="photos" alt="Romania" />
          </div>
      </div>
          <br>
          <div class="row">
              <div class="col-md-6 col-sm-12">
-                 <img src="https://scontent-msp1-1.xx.fbcdn.net/v/t1.0-9/60616511_10161875264100523_3865754678486630400_n.jpg?_nc_cat=100&_nc_sid=110474&_nc_ohc=wHc8Ly30ZAsAX_N-NbF&_nc_ht=scontent-msp1-1.xx&oh=2c67b8eef2fd1afe886438e46dbbe900&oe=5E85C445" width = 500px height = 500px class="rounded-circle" alt="Bran caslte"/>
+                 <img src="https://scontent-msp1-1.xx.fbcdn.net/v/t1.0-9/60616511_10161875264100523_3865754678486630400_n.jpg?_nc_cat=100&_nc_sid=110474&_nc_ohc=wHc8Ly30ZAsAX_N-NbF&_nc_ht=scontent-msp1-1.xx&oh=2c67b8eef2fd1afe886438e46dbbe900&oe=5E85C445" width = 450px height = 450px class="rounded-circle" id="photos"alt="Bran caslte"/>
              </div>
              <div class="col-md-6 col-sm-12">
-                 <img src= "https://scontent-msp1-1.xx.fbcdn.net/v/t1.0-9/60351495_10161875262905523_7724189448505655296_n.jpg?_nc_cat=107&_nc_sid=110474&_nc_ohc=TJhXvU1p7nYAX-60ZOd&_nc_ht=scontent-msp1-1.xx&oh=705c00a53140732f3de13dcd9e5a90fc&oe=5E818B4C" width = 500px height = 500px class="rounded-circle" alt="Bucharest" />
+                 <img src= "https://scontent-msp1-1.xx.fbcdn.net/v/t1.0-9/60351495_10161875262905523_7724189448505655296_n.jpg?_nc_cat=107&_nc_sid=110474&_nc_ohc=TJhXvU1p7nYAX-60ZOd&_nc_ht=scontent-msp1-1.xx&oh=705c00a53140732f3de13dcd9e5a90fc&oe=5E818B4C" width = 450px height = 450px class="rounded-circle" id="photos" alt="Bucharest" />
              </div>
          </div>
          <br>
          <div class="row">
              <div class="col-md-6 col-sm-12">
-                 <img src="https://scontent-msp1-1.xx.fbcdn.net/v/t1.0-9/53117861_10161592991435523_6048908751434416128_n.jpg?_nc_cat=104&_nc_sid=0be424&_nc_ohc=rI3i9lm8lfEAX8LetCi&_nc_ht=scontent-msp1-1.xx&oh=3cf403de01c60d165520b1dc470a19b6&oe=5E831556" width=500px height=500px class="rounded-circle" alt="Portugal"/>
+                 <img src="https://scontent-msp1-1.xx.fbcdn.net/v/t1.0-9/53117861_10161592991435523_6048908751434416128_n.jpg?_nc_cat=104&_nc_sid=0be424&_nc_ohc=rI3i9lm8lfEAX8LetCi&_nc_ht=scontent-msp1-1.xx&oh=3cf403de01c60d165520b1dc470a19b6&oe=5E831556" width=450px height=450px class="rounded-circle" id="photos" alt="Portugal"/>
              </div>
              <div class="col-md-6 col-sm-12">
-                 <img src="https://scontent-msp1-1.xx.fbcdn.net/v/t1.0-9/53152897_10161592989625523_6525434659961044992_n.jpg?_nc_cat=106&_nc_sid=0be424&_nc_ohc=uJJM4UbrLhgAX_icZAK&_nc_ht=scontent-msp1-1.xx&oh=95b56fe0edc232d74560f4820e889af6&oe=5E96AE36" width=500px height=500px class="rounded-circle" alt="Stairs"/>
+                 <img src="https://scontent-msp1-1.xx.fbcdn.net/v/t1.0-9/53152897_10161592989625523_6525434659961044992_n.jpg?_nc_cat=106&_nc_sid=0be424&_nc_ohc=uJJM4UbrLhgAX_icZAK&_nc_ht=scontent-msp1-1.xx&oh=95b56fe0edc232d74560f4820e889af6&oe=5E96AE36" width=450px height=450px class="rounded-circle" id="photos" alt="Stairs"/>
              </div>
          </div>
      </div>
