--- a/Contact.html
+++ b/Contact.html
@@ -10,7 +10,7 @@
     <title>Contact</title>
 </head>
 <body>
-    <nav class="navbar navbar-light" style="background-color: hsl(30, 9%, 96%)" >
+    <nav class="navbar navbar-light" style="background-color:rgb(246, 245, 244)" >
         <a class="navbar-brand" href="#">
         <img src="https://scontent-msp1-1.xx.fbcdn.net/v/t1.0-9/20800246_10159258654275523_4812675337554308324_n.jpg?_nc_cat=106&_nc_sid=85a577&_nc_ohc=eijJIddL1xUAX8HowG6&_nc_ht=scontent-msp1-1.xx&oh=657ee9d7d63dc5756f059367b55c6f6d&oe=5EFEBF7C" width="50" height="50" class="d-inline-block align-top rounded-circle" alt="Picture">
         <span style ="color:  rgb(2, 2, 51); font-size: 30px;"> Bethany Polovitz</span>
