updating portfolio, adding infomration and links

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
 <body>
   <div class="jumbotron"
-    style="background-image: url(https://scontent-msp1-1.xx.fbcdn.net/v/t1.0-9/32105018_10160450973345523_6090405101950730240_o.jpg?_nc_cat=107&_nc_sid=8024bb&_nc_ohc=bTSH2LDsBRUAX8T54oz&_nc_ht=scontent-msp1-1.xx&oh=d752fc5b8f2d5bb54058d1afa6207fc4&oe=5E9FF5AD); background-size: cover; background-repeat: no-repeat; padding: 120px 32px;">
+    style="background-image: url(./ProfilePhotos/rome.jpg) ; background-size: cover; background-repeat: no-repeat; padding: 120px 32px;">
    
-    <h1 class="display-4"> <span style="color:  rgb(2, 2, 51); "> Bethany
+    <h1 class="display-4"> <span style="color:  white; "> Bethany
         Polovitz</span></h1>
   </div>
   <nav class="navbar navbar-light">
@@ -35,23 +35,23 @@
 
   </nav>
   <br>
-  <div class="container" style="background-color: rgb(246, 245, 244);">
+  <div class="container" style="background-color: white;">
 
     <div class="row">
       <div class="col-lg-4 col-md-12 col-sm-12">
-        <p class="about" style="color: rgb(2, 2, 51);">
+        <p class="about" style="color: black;">
           <img
-            src="https://scontent-ort2-1.xx.fbcdn.net/v/t1.0-9/65078387_10162026663400523_7045194920469987328_n.jpg?_nc_cat=108&_nc_sid=110474&_nc_ohc=hJ-59FPWtPsAX9svTqp&_nc_ht=scontent-ort2-1.xx&oh=8ce61fdd9cc9fee4864e70a6908ac9f8&oe=5EFB7649"
+            src="./ProfilePhotos/me.jpg"
             style="width: 100%" class="rounded" id="main" alt="Photo of Me" /></p>
       </div>
       <div class="col-lg-4 col-md-12 col-sm-12">
         <img
-          src="https://scontent-msp1-1.xx.fbcdn.net/v/t31.0-8/20616881_10159203801265523_2353241883296983822_o.jpg?_nc_cat=107&_nc_sid=e007fa&_nc_ohc=HhdI8RCGGjQAX_Iifq-&_nc_ht=scontent-msp1-1.xx&oh=e84fcd56b497f6f836c07d33e49dc814&oe=5E9F7E42"
+          src="./ProfilePhotos/iceland.jpg"
           style="width: 100%" class="rounded" id="main" alt="castle" />
       </div>
       <div class="col-lg-4 col-md-12 col-sm-12">
         <img
-          src="https://scontent-msp1-1.xx.fbcdn.net/v/t1.0-9/60462518_10161875288735523_4956274942552309760_n.jpg?_nc_cat=108&_nc_sid=110474&_nc_ohc=PGmn_QvxxlwAX9diev_&_nc_ht=scontent-msp1-1.xx&oh=2856ba1bb12ce55c2714fa65b7323059&oe=5EA1406B"
+          src="./ProfilePhotos/romania.jpg"
           style="width: 100%" class="rounded" id="main" alt="Photo of me" />
       </div>
     </div>
@@ -59,27 +59,38 @@
   <br>
   <div class="row">
     <div class="col-lg-4 col-md-12 col-sm-12">
-      <h1>About Me:</h1>
-      <p class="text">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi ullam delectus tempore, est repellendus dolor ex,
-        maxime, quas necessitatibus magni atque iure maiores perferendis. Pariatur nesciunt expedita debitis voluptatum
-        inventore.
+      <h2>About Me:</h2>
+      <p class="text" style = "color: black; font-size: 20px;">
+       I am 28 years old born and raised in Minnesota. I like to travel and have lived in New Zealand and Czechia. I am completing a Full Stack Web Development Certificate through the University of Minnesota and am looking for a remote job in web developement. 
       </p>
     </div>
     <div class="col-lg-4 col-md-12 col-sm-12">
-      <h1>Experience:</h1>
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sint doloremque debitis inventore rem molestiae
-        itaque, quisquam quaerat facere excepturi esse ullam perspiciatis quos quia blanditiis, cumque adipisci commodi.
-        Obcaecati, nobis.
+      <h2>Education:</h2>
+      <p style="color: black; font-size: 20px;">
+        <ul style="font-size: 20px;">
+       <li>From 2010-2014 I attended the University of Wisconsin-Madison and graduated with an English Major and Certificate in Business.
+       </li>
+      <li>In 2015 I got my ESL Certificate through CIEE.
+      </li>
+       <li>In 2020 I attended the Univeristy of Minnesota Coding Bootcamp to recieve a Web Development Full Stack Certificate.
+      </li>
       </p>
     </div>
     <div class="col-lg-4 col-md-12 col-sm-12">
-      <h1>More Information:</h1>
-      <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sint doloremque debitis inventore rem molestiae
-        itaque, quisquam quaerat facere excepturi esse ullam perspiciatis quos quia blanditiis, cumque adipisci commodi.
-        Obcaecati, nobis.
+      <h2>More Information:</h2>
+      <p style="color: black; font-size: 20px;">
+        Linkedin Profile:
+        <a href="https://www.linkedin.com/in/bethany-polovitz-66b18859/" class="btn btn-outline-dark" role="button" aria-pressed="true">Open Linkedin</a>
+      </p>
+      <br>
+      <p style="font-size: 20px;">
+        GitHub Profile:
+        <a href="https://github.com/bpolo15" class="btn btn-outline-dark" role="button" aria-pressed="true">Open GitHub</a>
+      </p>
+      <br>
+      <p style="font-size: 20px;">
+        Resume:
+        <a href="BethanyPolovitzResume2020.pdf" class="btn btn-outline-dark" role="button" aria-pressed="true">Open Resume</a>
       </p>
     </div>
 
