--- a/portfolio.html
+++ b/portfolio.html
@@ -52,7 +52,7 @@
     </h2>
     <div class="container">
       <div class="row">
-        <div class="col-lg-3 col-sm-12">
+        <div class="col-lg-3 col-md-6 col-sm-12">
           <div class="card" style="width: 18rem; background-color: white;">
             <img src="./ProfilePhotos/Travelist.JPG" height="175px" class="card-img-top" alt="Travelist" />
             <div class="card-body">
@@ -65,7 +65,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-3 col-sm-12">
+        <div class="col-lg-3 col-md-6 col-sm-12">
             <div class="card" style="width: 18rem; background-color: white;">
               <img src="./ProfilePhotos/CryptoTracking.JPG" height="175px" class="card-img-top" alt="Note-Taker" />
               <div class="card-body">
@@ -78,7 +78,7 @@
               </div>
             </div>
           </div>
-        <div class="col-lg-3 col-sm-12">
+        <div class="col-lg-3 col-md-6  col-sm-12">
             <div class="card" style="width: 18rem; background-color: white;">
               <img src="./ProfilePhotos/note-taker.JPG" height="175px" class="card-img-top" alt="Note-Taker" />
               <div class="card-body">
@@ -91,7 +91,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-3 col-sm-12">
+          <div class="col-lg-3 col-md-6  col-sm-12">
             <div class="card" style="width: 18rem; background-color: white;">
               <img src="./ProfilePhotos/dailyplanner.JPG" height="175px" class="card-img-top" alt="dailyplanner" />
               <div class="card-body">
