--- a/portfolio.html
+++ b/portfolio.html
@@ -41,9 +41,9 @@
         <li class="nav-item">
           <a class="nav-link" href="portfolio.html">Portfolio</a>
         </li>
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a class="nav-link" href="Contact.html">Contact</a>
-        </li>
+        </li> -->
       </ul>
     </nav>
     <br />
@@ -106,5 +106,6 @@
           </div>
       </div>
     </div>
+    <footer style="text-align: center;">Contact Me: bethany.polovitz@gmail.com</footer>
   </body>
 </html>
