--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
       <li class="nav-item">
         <a class="nav-link" href="portfolio.html">Portfolio</a>
       </li>
-      <li class="nav-item">
+      <!-- <li class="nav-item">
         <a class="nav-link" href="Contact.html">Contact</a>
-      </li>
+      </li> -->
     </ul>
 
   </nav>
@@ -101,6 +101,7 @@
 
 
 
+  <footer style="text-align: center;">Contact Me: bethany.polovitz@gmail.com</footer>
 
 
 
