--- a/index.html
+++ b/index.html
@@ -61,18 +61,18 @@
     <div class="col-lg-4 col-md-12 col-sm-12">
       <h2>About Me:</h2>
       <p class="text" style = "color: black; font-size: 20px;">
-       I am 28 years old born and raised in Minnesota. I like to travel and have lived in New Zealand and Czechia. I am completing a Full Stack Web Development Certificate through the University of Minnesota and am looking for a remote job in web developement. 
+        Hello! My name is Bethany Polovitz and I am a Full-Stack Developer living in Minnesota. I have completed a Full Stack Web Development Certificate through the University of Minnesota Continuing Education and Professional Studies program. I am looking for a remote job in web development. I like to travel and have lived in New Zealand and The Czech Republic. I also enjoy hiking and camping and would like to work remotely so I finally have time to get a dog. I enjoy new challenges and learning new technologies and skills. I have experience working remotely both solo and as a team. For more information on my background and skills please see my resume in More Information. Thank you!
       </p>
     </div>
     <div class="col-lg-4 col-md-12 col-sm-12">
       <h2>Education:</h2>
       <p style="color: black; font-size: 20px;">
         <ul style="font-size: 20px;">
-       <li>From 2010-2014 I attended the University of Wisconsin-Madison and graduated with an English Major and Certificate in Business.
+       <li>In 2014 I graduated with a Bachelor of Science degree in English Literature in conjunction with a Business Certificate through the University of Wisconsin-Madison.
        </li>
-      <li>In 2015 I got my ESL Certificate through CIEE.
+      <li>In 2015 I received an ESL Certificate through CIEE and the opportunity to teach English in the Czech Republic. 
       </li>
-       <li>In 2020 I attended the Univeristy of Minnesota Coding Bootcamp to recieve a Web Development Full Stack Certificate.
+       <li>In 2020 I completed a Full-Stack Web Development Certificate through the University of Minnesota Continuing Education and Professional Studies program. I created various applications to showcase my work which you will find in the Portfolio tab in the navigation bar, or on my GitHub pages. 
       </li>
       </p>
     </div>
