--- a/portfolio.html
+++ b/portfolio.html
@@ -62,7 +62,7 @@
         <!-- </div> -->
       </div>
       <div class="card" style="width: 18rem;">
-        <img src="./ProfilePhotos/Travelist.JPG"  height="160px" class="card-img-top" alt="CouchParty" >
+        <img src="./ProfilePhotos/Travelist.JPG"  height="160px" class="card-img-top" alt="Travelist" >
         <!-- <div class="card-body"> -->
           <h5 class="card-title" style="font-weight: bold;">Travelist</h5>
           <p class="card-text"> This application was created to be a place where the user can house all their travel ideas in one place. </p>
@@ -71,7 +71,7 @@
         <!-- </div> -->
       </div>
       <div class="card" style="width: 18rem;">
-        <img src="./ProfilePhotos//CryptoTracking.JPG" height="160px" class="card-img-top" alt="CouchParty" >
+        <img src="./ProfilePhotos//CryptoTracking.JPG" height="160px" class="card-img-top" alt="CryptoTracking" >
         <!-- <div class="card-body"> -->
           <h5 class="card-title" style="font-weight: bold;">CryptoTracking</h5>
           <p class="card-text"> This application allows the user keep track of their various crypto coins.</p>
