updating main page

--- a/index.html
+++ b/index.html
@@ -2,108 +2,100 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-  <link href="https://fonts.googleapis.com/css?family=Slabo+27px&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Slabo+27px&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style1.css">
 
-  <title>Bethany Polovitz</title>
+    <title>Bethany Polovitz</title>
 </head>
 
 <body>
-  <div class="jumbotron"
-    style="background-image: url(./ProfilePhotos/rome.jpg) ; background-size: cover; background-repeat: no-repeat; padding: 120px 32px;">
-   
-    <h1 class="display-4"> <span style="color:  white; "> Bethany
-        Polovitz</span></h1>
-  </div>
-  <nav class="navbar navbar-light">
-    <!--right side of navbar-->
-    <ul class="nav justify-content-end">
-      <li class="nav-item">
-        <a class="nav-link active" href="index.html">About Me</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="portfolio.html">Portfolio</a>
-      </li>
-      <!-- <li class="nav-item">
-        <a class="nav-link" href="Contact.html">Contact</a>
-      </li> -->
-    </ul>
+    <div class="jumbotron"
+        style="background-image: url(./ProfilePhotos/rome.jpg) ; background-size: cover; background-repeat: no-repeat; padding: 120px 32px; opacity: 0.70;">
 
-  </nav>
-  <br>
-  <div class="container" style="background-color: white;">
-
-    <div class="row">
-      <div class="col-lg-4 col-md-12 col-sm-12">
-        <p class="about" style="color: black;">
-          <img
-            src="./ProfilePhotos/me.jpg"
-            style="width: 100%" class="rounded" id="main" alt="Photo of Me" /></p>
-      </div>
-      <div class="col-lg-4 col-md-12 col-sm-12">
-        <img
-          src="./ProfilePhotos/iceland.jpg"
-          style="width: 100%" class="rounded" id="main" alt="castle" />
-      </div>
-      <div class="col-lg-4 col-md-12 col-sm-12">
-        <img
-          src="./ProfilePhotos/romania.jpg"
-          style="width: 100%" class="rounded" id="main" alt="Photo of me" />
-      </div>
+        <h1 class="name"> <span style="color: white; font-weight: bold;"> Bethany
+                Polovitz</span></h1>
+                <p><a href="https://www.linkedin.com/in/bethany-polovitz-66b18859/" style="color: white;">Linkedin Profile</a>
+                <a href="https://github.com/bpolo15" style="color: white;">- GitHub Page </a>
+            </p>
+            <p>
+                <a href="portfolio.html" class="btn btn-dark" role="button" aria-pressed="true">Go to Portfolio</a></p>
     </div>
- 
-  <br>
-  <div class="row">
-    <div class="col-lg-4 col-md-12 col-sm-12">
-      <h2>About Me:</h2>
-      <p class="text" style = "color: black; font-size: 20px;">
-        Hello! My name is Bethany Polovitz and I am a Full-Stack Developer living in Minnesota. I have completed a Full Stack Web Development Certificate through the University of Minnesota Continuing Education and Professional Studies program. I am looking for a remote job in web development. I like to travel and have lived in New Zealand and The Czech Republic. I also enjoy hiking and camping and would like to work remotely so I finally have time to get a dog. I enjoy new challenges and learning new technologies and skills. I have experience working remotely both solo and as a team. For more information on my background and skills please see my resume in More Information. Thank you!
-      </p>
-    </div>
-    <div class="col-lg-4 col-md-12 col-sm-12">
-      <h2>Education:</h2>
-      <p style="color: black; font-size: 20px;">
-        <ul style="font-size: 20px;">
-       <li>In 2014 I graduated with a Bachelor of Science degree in English Literature in conjunction with a Business Certificate through the University of Wisconsin-Madison.
-       </li>
-      <li>In 2015 I received an ESL Certificate through CIEE and the opportunity to teach English in the Czech Republic. 
-      </li>
-       <li>In 2020 I completed a Full-Stack Web Development Certificate through the University of Minnesota Continuing Education and Professional Studies program. I created various applications to showcase my work which you will find in the Portfolio tab in the navigation bar, or on my GitHub pages. 
-      </li>
-      </p>
-    </div>
-    <div class="col-lg-4 col-md-12 col-sm-12">
-      <h2>More Information:</h2>
-      <p style="color: black; font-size: 20px;">
-        Linkedin Profile:
-        <a href="https://www.linkedin.com/in/bethany-polovitz-66b18859/" class="btn btn-outline-dark" role="button" aria-pressed="true">Open Linkedin</a>
-      </p>
-      <br>
-      <p style="font-size: 20px;">
-        GitHub Profile:
-        <a href="https://github.com/bpolo15" class="btn btn-outline-dark" role="button" aria-pressed="true">Open GitHub</a>
-      </p>
-      <br>
-      <p style="font-size: 20px;">
-        Resume:
-        <a href="ProfilePhotos/Bethany-Polovitz-2020.pdf" class="btn btn-outline-dark" role="button" aria-pressed="true">Open Resume</a>
-      </p>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-6 col-md-12 col-sm-12">
+                <div class="card" id="photo1">
+                    <img src="./ProfilePhotos/me.jpg" class="card-img-top" alt="Photo of Me">
+                </div>
+            </div>
+            <div class="col-lg-6 col-md-12 col-sm-12">
+            <div class="card" id="card1" >
+                <div class="card-body">
+                    <p class="card-text">Full-Stack Developer living in Minnesota. I have completed a Full Stack Web Development Certificate through the University of Minnesota Continuing Education and Professional Studies program. I am looking for a remote job in web development. I like to travel and have lived in New Zealand and The Czech Republic. I also enjoy hiking and camping and would like to work remotely so I finally have time to get a dog. I enjoy new challenges and learning new technologies and skills. I have experience working remotely both solo and as a team. For more information on my background and skills please see my <a href ="ProfilePhotos/Bethany-Polovitz-2020.pdf" style="color: purple;">Resume</a>.</p>
+                    <!-- <a href="#" class="card-link">Card link</a>
+                  <a href="#" class="card-link">Another link</a> -->
+                </div>
+            </div>
+        </div>
+        </div>
     </div>
 
-
-  </div>
-  </div>
-
-
-
-
-  <footer style="text-align: center;">Contact Me: bethany.polovitz@gmail.com</footer>
-
-
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-6 col-md-12 col-sm-12" id ="hidden">
+                <div class="card" id="photo2">
+                    <img src="./ProfilePhotos/iceland.jpg" class="card-img-top" alt="Iceland">
+                </div>
+            </div>
+            <div class="col-lg-6 col-md-12 col-sm-12">
+                <div class="card" id="card2" >
+                    <div class="card-body">
+                        <p style="color: black; font-size: 20px;">
+                            <ul>
+                           <li>In 2014 I graduated with a Bachelor of Science degree in English Literature in conjunction with a Business Certificate through the University of Wisconsin-Madison.
+                           </li>
+                           <li>In 2020 I completed a Full-Stack Web Development Certificate through the University of Minnesota Continuing Education and Professional Studies program. I created various applications to showcase my work which you will find in the <a href="portfolio.html" style="color: purple;">Portfolio</a> section. 
+                          </li>
+                          </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-6 col-md-12 col-sm-12">
+                <div class="card" id="photo2">
+                    <img src="./ProfilePhotos/iceland.jpg" class="card-img-top" alt="Iceland">
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-6 col-md-12 col-sm-12">
+                <div class="card" id="photo1">
+                    <img src="./ProfilePhotos/romania.jpg" class="card-img-top" alt="Romania">
+                </div>
+            </div>
+            <div class="col-lg-6 col-md-12 col-sm-12">
+            <div class="card" id="card3" >
+                <h2>More Information:</h2>
+                <p>
+                    <a href="/portfolio.html" class="btn btn-outline-dark" role="button" aria-pressed="true">Go to Portfolio Page</a>
+                  </p>
+                <p>
+                  <a href="https://www.linkedin.com/in/bethany-polovitz-66b18859/" class="btn btn-outline-dark" role="button" aria-pressed="true">Go to Linkedin Page</a>
+                </p>
+                <p>
+                  <a href="https://github.com/bpolo15" class="btn btn-outline-dark" role="button" aria-pressed="true">Go to GitHub Pages</a>
+                </p>
+                <p>
+                  <a href="ProfilePhotos/Bethany-Polovitz-2020.pdf" class="btn btn-outline-dark" role="button" aria-pressed="true">View Resume</a>
+                </p>
+            </div>
+        </div>
+        </div>
+    </div>
 
 
 </body>
